--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
     </head>
 
     <body style="font-family: 'Poppins', sans-serif;">
-        <div id="root" style="position: relative; min-height: 100vh;">
+        <div id="root" style="position: relative;">
 
         </div>
     </body>
